[package]
name = "distribute-work"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = { version = "*", features = ["tls"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.27", features = ["derive"] }

[build-dependencies]
tonic-build = "*"
