[package]
name = "distribute-work"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[lib]
name = "alltoall"
path = "src/alltoall.rs"

[dependencies]
tonic = { version = "*" }
prost = "0.13.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
jsonwebtoken = "9.3.0"
futures = "0.3.31"

[build-dependencies]
tonic-build = "*"
